Fix overflow text overflow issues bleeding into other columns (#203)
Refs:
INFORCRM-27920

--- a/content/css/themes/crm/sohoreset.less
+++ b/content/css/themes/crm/sohoreset.less
@@ -1,6 +1,7 @@
 .summary-form .data {
   height: auto !important;
   margin-bottom: 2rem;
+  word-break: break-word;
 }
 
 .actions-row {
